--- a/index.html
+++ b/index.html
@@ -30,20 +30,10 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Our Company</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
+                        <a class="nav-link" href="#" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Resources</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown01">
-                            <a class="dropdown-item" href="#">Action</a>
-                            <a class="dropdown-item" href="#">Another action</a>
-                            <a class="dropdown-item" href="#">Something else here</a>
-                        </div>
+                        <a class="nav-link" href="#" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -55,7 +45,7 @@
             <div class="container">
                 <div class="row" style="align-items: center;">
                     <div class="col-xl-6 col-lg-5">
-                        <img src="assets/hero-image.png">
+                        <img src="assets/hero.png">
                     </div>
                     <div class="col-xl-6 col-lg-7">
                         <div>
@@ -231,7 +221,7 @@ under <span class="theme-color">One Roof</span></h1>
                 <div class="row" style="align-items: center; justify-content: center;">
                     <div class="col-xl-2 col-lg-2">
                         <div class="step-card">
-                            <img src="assets/dummy.png">
+                            <img src="assets/step1.svg">
                             <div class="title">Step 1</div>
                             <div class="description">Easily register and onboard with one time KYC</div>
                         </div>
@@ -241,7 +231,7 @@ under <span class="theme-color">One Roof</span></h1>
                     </div>
                     <div class="col-xl-2 col-lg-2">
                         <div class="step-card">
-                            <img src="assets/dummy.png">
+                            <img src="assets/step2.svg">
                             <div class="title">Step 2</div>
                             <div class="description">Navigate and access preferred financial segment</div>
                         </div>
@@ -251,7 +241,7 @@ under <span class="theme-color">One Roof</span></h1>
                     </div>
                     <div class="col-xl-2 col-lg-2">
                         <div class="step-card">
-                            <img src="assets/dummy.png">
+                            <img src="assets/step3.svg">
                             <div class="title">Step 3</div>
                             <div class="description">Quickly compare financial products and services within segments</div>
                         </div>
@@ -261,7 +251,7 @@ under <span class="theme-color">One Roof</span></h1>
                     </div>
                     <div class="col-xl-2 col-lg-2">
                         <div class="step-card">
-                            <img src="assets/dummy.png">
+                            <img src="assets/step4.svg">
                             <div class="title">Step 4</div>
                             <div class="description">Smoothly make a payment to avail services
 </div>
