--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Starter Template for Bootstrap</title>
+        <title>Finorator</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
         <!-- Custom styles for this template -->
         <link href="main.css" rel="stylesheet" type="text/css">
         <link href="starter-template.css" rel="stylesheet" type="text/css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Red+Hat+Display:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     </head>
     <body>
         <nav class="navbar navbar-expand-md fixed-top pl-5 pr-5">
@@ -30,14 +34,14 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
+                        <a class="nav-link" href="about-us.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
+                        <a class="nav-link" href="partner.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <button class="theme-btn btn my-2 my-sm-0" type="submit">Contact Us</button>
+                    <button class="theme-btn btn my-2 my-sm-0" type="button">Contact Us</button>
                 </form>
             </div>
         </nav>
@@ -117,7 +121,7 @@ under <span class="theme-color">One Roof</span></h1>
                         <div class="col-xl-2 col-lg-2">
                             <div class="segment-card">
                                 <div class="card-holder">
-                                    <img src="assets/income-tax.svg">
+                                    <img src="assets/real-estate.svg">
                                 </div>
                                 <div class="card-title">Real Estate</div>
                                 <p class="theme-p">
@@ -190,14 +194,14 @@ under <span class="theme-color">One Roof</span></h1>
                     </div>
                     <div class="col-xl-4 col-lg-4"> 
                         <div class="text-center feature-smallcard">
-                            <img src="assets/side-feature4.svg">
+                            <img src="assets/feature-5.svg">
                             <div class="title">Pay Once for One Segment</div>
                             <div class="description">You don’t need to pay multiple times to avail different services under each segment and sub-segments. With Finorator, you only pay once to gain access to a range of products & services under each segment or sub-segment.</div>
                         </div>
                     </div>
                     <div class="col-xl-4 col-lg-4">
                         <div class="text-center feature-smallcard">
-                            <img src="assets/side-feature4.svg">
+                            <img src="assets/feature-6.svg">
                             <div class="title">Complete Privacy</div>
                             <div class="description">Worried about your personal and transactional details? You don’t need
                                 to! Finorator provides absolute privacy with user-friendly cloud storage support for all your important document uploads.
@@ -206,7 +210,7 @@ under <span class="theme-color">One Roof</span></h1>
                     </div>
                     <div class="col-xl-4 col-lg-4">
                         <div class="text-center feature-smallcard">
-                            <img src="assets/side-feature4.svg">
+                            <img src="assets/feature-7.svg">
                             <div class="title">Refer products and Win Cash Rewards</div>
                             <div class="description">Avail cash rewards and cashback for each product referral you make to your friends, family, and colleagues.
 </div>
