--- a/contact-us.html
+++ b/contact-us.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="description" content="">
         <meta name="author" content="">
-        <title>Finorator - Become a Partner</title>
+        <title>Finorator - Contact Us</title>
         <!-- Bootstrap core CSS -->
         <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
         <!-- Custom styles for this template -->
@@ -34,10 +34,10 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
+                        <a class="nav-link" href="about-us.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
+                        <a class="nav-link" href="partner.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -50,7 +50,7 @@
                 <div class="row" style="align-items: center;">
                     <div class="col-lg-12 col-xl-12">
                         <div>
-                            <h1 class="theme-h1 text-center theme-color">Become a Partner</h1>
+                            <h1 class="theme-h1 text-center theme-color">Contact Us</h1>
                         </div>
                     </div>
                 </div>
