--- a/partner.html
+++ b/partner.html
@@ -34,10 +34,10 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
+                        <a class="nav-link" href="about-us.html" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
+                        <a class="nav-link active" href="#" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -45,13 +45,152 @@
                 </form>
             </div>
         </nav>
-        <div class="hero sub-hero text-center">
+        <div class="hero">
             <div class="container">
                 <div class="row" style="align-items: center;">
-                    <div class="col-lg-12 col-xl-12">
+                    <div class="col-xl-6 col-lg-5">
+                        <img src="assets/partner.png">
+                    </div>
+                    <div class="col-xl-6 col-lg-7">
                         <div>
-                            <h1 class="theme-h1 text-center theme-color">Become a Partner</h1>
+                            <h1 class="theme-h1">Financial Products
+Ka <span class="theme-color">SuperMarket</span></h1>
+                            <p class="theme-p mb-4">Grow your expertise and increase your business revenue to become a technology-driven financial manager — Finotarian!</p>
+                            <button class="theme-btn btn my-2 my-sm-0 theme-bg2">Learn More</button>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section-body">
+            <div class="container">
+                <div class="theme-head">Become a Partner</div>
+                <p class="partner-section">Finorator allows you to be an expert financial manager who is aware of all the segments of finance including shares, mutual funds, loans, income tax, real estate, as well as other investments and using products of every segment to manage the financial operations of your business.<br><br>
+You’re just one step away from your <b>Dream Career</b></p>
+                <div class="theme-head mt-4">Why become a Finorator Partner?</div>
+                <div class="row">
+                    <div class="col-lg-4 col-xl-4">
+                        <div class="text-center feature-smallcard">
+                            <img src="assets/side-feature1.svg">
+                            <div class="title">
+                                Be a Super Advisor
+</div>
+                            <div class="description">To spend less time and money on otherwise financial applications of different financial sectors
+</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-xl-4">
+                        <div class="text-center feature-smallcard">
+                            <img src="assets/side-feature1.svg">
+                            <div class="title">
+                                Generate High Revenue
+</div>
+                            <div class="description">Create a better-earning opportunity by selling a range of products of all different segments under one roof
+</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-xl-4">
+                        <div class="text-center feature-smallcard">
+                            <img src="assets/side-feature1.svg">
+                            <div class="title">
+                                Sell your products Online
+</div>
+                            <div class="description">Easily link all your social media and digital platforms seamlessly and sell your products online
+</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-xl-4">
+                        <div class="text-center feature-smallcard">
+                            <img src="assets/side-feature1.svg">
+                            <div class="title">
+                                Easily Access CRM
+</div>
+                            <div class="description">Get insights into your business through reports and manage different business segments for your customers effectively
+</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-xl-4">
+                        <div class="text-center feature-smallcard">
+                            <img src="assets/side-feature1.svg">
+                            <div class="title">
+                                Effortless User Interface
+</div>
+                            <div class="description">Navigate through different segments using a simple and easy User experience.
+</div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-xl-4">
+                        <div class="text-center feature-smallcard">
+                            <img src="assets/side-feature1.svg">
+                            <div class="title">
+                                Grow your Career
+</div>
+                            <div class="description">Increase your learning graph regularly with our IRDA and NISM affiliated certified trainings
+</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="section-body partner-form-section">
+            <div class="container">
+                <div class="theme-head mt-4">How can you be a Partner?</div>
+                <div class="row" style="align-items: center;">
+                    <div class="col-lg-6">
+                        <div>
+                            <div class="steps">Step 1</div>
+                            <p class="steps-info">Fill your details and Submit Aadhaar &amp; PAN</p>
+                        </div>
+                        <div>
+                            <div class="steps">Step 2</div>
+                            <p class="steps-info">Select your Financial Segment</p>
+                        </div>
+                        <div>
+                            <div class="steps">Step 3</div>
+                            <p class="steps-info">Complete your Sign Up process</p>
+                        </div>
+                        <div>
+                            <div class="steps">Step 4</div>
+                            <p class="steps-info">Voila! You are now a part of Finorator.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <form class="partner-form" style="text-align: center;">
+                            <div class="form-group">
+                                <label for="formGroupExampleInput">Name</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Enter your name"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="formGroupExampleInput2">Email</label>
+                                <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Enter your email"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="formGroupExampleInput2">Mobile no.</label>
+                                <input type="text" class="form-control" id="" placeholder="Enter your Mobile no."/>
+                            </div>
+                            <div class="form-group">
+                                <label for="formGroupExampleInput2">Address</label>
+                                <input type="text" class="form-control" id="" placeholder="Enter full address with pin code"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="formGroupExampleInput2">Aadhar Card</label>
+                                <input type="text" class="form-control" id="" placeholder="Enter your adhar card"/>
+                            </div>
+                            <div class="form-group">
+                                <label for="formGroupExampleInput2">PAN Card</label>
+                                <input type="text" class="form-control" id="" placeholder="Enter your adhar card"/>
+                            </div>
+                            <div class="form-group mb-5">
+                                <label for="formGroupExampleInput2">Segment</label>
+                                <select name="cars" id="cars" form="carform">
+                                    <option value="volvo">Select segment</option>
+                                    <option value="saab">Mutual Funds</option>
+                                    <option value="opel">Insurance</option>
+                                    <option value="audi">Loans</option>
+                                </select>
+                            </div>
+                            <button class="theme-btn btn my-2 my-sm-0 theme-bg2" type="submit">Submit</button>
+                        </form>
                     </div>
                 </div>
             </div>
