--- a/about-us.html
+++ b/about-us.html
@@ -34,10 +34,10 @@
                         </div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
+                        <a class="nav-link active" href="#" id="dropdown01" aria-haspopup="true" aria-expanded="false">About Us</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" id="dropdown01" aria-haspopup="true" aria-expanded="false">Become a Partner</a>
+                        <a class="nav-link" id="dropdown01" aria-haspopup="true" aria-expanded="false" href="partner.html">Become a Partner</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
