--- a/partner.html
+++ b/partner.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-md fixed-top pl-5 pr-5">
-            <a href="index.html" class="navbar-brand"><img src="assets/logo.png"></a>
+            <a href="index.html" class="navbar-brand"><img src="assets/fino2.gif"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation" style="background-color: #3a83b5;">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -84,7 +84,7 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                 <div class="row">
                     <div class="col-lg-4 col-xl-4">
                         <div class="text-center feature-smallcard">
-                            <img src="assets/side-feature1.svg">
+                            <img src="assets/partner-feature-1.svg">
                             <div class="title">
                                 Be a Super Advisor
 </div>
@@ -94,7 +94,7 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                     </div>
                     <div class="col-lg-4 col-xl-4">
                         <div class="text-center feature-smallcard">
-                            <img src="assets/side-feature1.svg">
+                            <img src="assets/partner-feature-2.svg">
                             <div class="title">
                                 Generate High Revenue
 </div>
@@ -104,7 +104,7 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                     </div>
                     <div class="col-lg-4 col-xl-4">
                         <div class="text-center feature-smallcard">
-                            <img src="assets/side-feature1.svg">
+                            <img src="assets/partner-feature-3.svg">
                             <div class="title">
                                 Sell your products Online
 </div>
@@ -114,7 +114,7 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                     </div>
                     <div class="col-lg-4 col-xl-4">
                         <div class="text-center feature-smallcard">
-                            <img src="assets/side-feature1.svg">
+                            <img src="assets/partner-feature-4.svg">
                             <div class="title">
                                 Easily Access CRM
 </div>
@@ -124,7 +124,7 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                     </div>
                     <div class="col-lg-4 col-xl-4">
                         <div class="text-center feature-smallcard">
-                            <img src="assets/side-feature1.svg">
+                            <img src="assets/partner-feature-5.svg">
                             <div class="title">
                                 Effortless User Interface
 </div>
@@ -134,7 +134,7 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                     </div>
                     <div class="col-lg-4 col-xl-4">
                         <div class="text-center feature-smallcard">
-                            <img src="assets/side-feature1.svg">
+                            <img src="assets/partner-feature-6.svg">
                             <div class="title">
                                 Grow your Career
 </div>
