--- a/contact-us.html
+++ b/contact-us.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <nav class="navbar navbar-expand-md fixed-top pl-5 pr-5">
-            <a href="index.html" class="navbar-brand"><img src="assets/logo.png"></a>
+            <a href="index.html" class="navbar-brand"><img src="assets/fino2.gif"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation" style="background-color: #3a83b5;">
                 <span class="navbar-toggler-icon"></span>
             </button>
