--- a/partner.html
+++ b/partner.html
@@ -148,26 +148,11 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
         <div class="section-body partner-form-section">
             <div class="container">
                 <div class="theme-head mt-4">How can you be a Partner?</div>
-                <div class="row" style="align-items: center;">
-                    <div class="col-lg-6">
-                        <div>
-                            <div class="steps">Step 1</div>
-                            <p class="steps-info">Fill your details and Submit Aadhaar &amp; PAN</p>
-                        </div>
-                        <div>
-                            <div class="steps">Step 2</div>
-                            <p class="steps-info">Select your Financial Segment</p>
-                        </div>
-                        <div>
-                            <div class="steps">Step 3</div>
-                            <p class="steps-info">Complete your Sign Up process</p>
-                        </div>
-                        <div>
-                            <div class="steps">Step 4</div>
-                            <p class="steps-info">Voila! You are now a part of Finorator.</p>
-                        </div>
+                <div class="row" style="align-items: center; justify-content: center;">
+                    <div class="col-lg-12 mb-5">
+                        <img src="assets/steps.png" class="w-100"/>
                     </div>
-                    <div class="col-lg-6">
+                    <div class="col-lg-7">
                         <form class="partner-form" style="text-align: center;">
                             <div class="form-group">
                                 <label for="formGroupExampleInput">Name</label>
