--- a/partner.html
+++ b/partner.html
@@ -68,6 +68,7 @@
                             <h1 class="theme-h1">Financial Products
 Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-type='[ "Supermarket.", "Bazaar." ]'></a></span></h1>
                             <p class="theme-p mb-4">Grow your expertise and increase your business revenue to become a technology-driven financial manager — Finotarian!</p>
+                            <p class="theme-p mb-4">Increase your learning graph regularly with our IRDA and NISM affiliated certified trainings</p>
                             <button class="theme-btn btn my-2 my-sm-0 theme-bg2">Learn More</button>
                         </div>
                     </div>
@@ -88,7 +89,7 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                             <div class="title">
                                 Be a Super Advisor
 </div>
-                            <div class="description">To spend less time and money on otherwise financial applications of different financial sectors
+                            <div class="description">Opportunity to become a Super Advisor and work in different financial segments and fields.
 </div>
                         </div>
                     </div>
@@ -176,7 +177,7 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                             </div>
                             <div class="form-group">
                                 <label for="formGroupExampleInput2">PAN Card</label>
-                                <input type="text" class="form-control" id="" placeholder="Enter your adhar card"/>
+                                <input type="text" class="form-control" id="" placeholder="Enter your PAN card"/>
                             </div>
                             <div class="form-group mb-5">
                                 <label for="formGroupExampleInput2">Segment</label>
@@ -185,6 +186,9 @@ Ka <br><span class="theme-color"><a class="typewrite" data-period="2000" data-ty
                                     <option value="saab">Mutual Funds</option>
                                     <option value="opel">Insurance</option>
                                     <option value="audi">Loans</option>
+                                    <option value="audi">Shares & Stocks</option>
+                                    <option value="audi">Income Tax & GST</option>
+                                    <option value="audi">Real Estate</option>
                                 </select>
                             </div>
                             <button class="theme-btn btn my-2 my-sm-0 theme-bg2" type="submit">Submit</button>
