--- a/about-us.html
+++ b/about-us.html
@@ -169,7 +169,7 @@ About Finorator</h1>
                                     <p>HR Manager</p>
                                 </div>
                                 <div class="team-card col-xl-3 col-lg-4">
-                                    <img src="assets/person.jpeg">
+                                    <img src="assets/team/image%2043.png">
                                     <h3>Indra Pratap Singh</h3>
                                     <p>Senior Operational Manager</p>
                                 </div>
